--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   },
   "scripts": {
     "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run lite",
+    "lite": "lite-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "2.3"
+  },
+  "dependencies": {
+    "@enzoferey/ethers-error-parser": "^0.2.3"
   }
 }
